# House

./: Deploy.py  README.md  Streamlit.py  app.py  pyproject.toml
.Github/WorkFlows/: pipeline.yaml
Data/: house_price_model.pkl  modelo.pkl
Notebooks/: houses_V1.ipynb  houses_V2.ipynb  houses_V3.ipynb
Versions/: Deploy_V1.py
