[tool.poetry]
name = "house-sales-in-king-county-usa"
version = "0.1.0"
description = ""
authors = ["Juan Gonçalves <juangoncalves482@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
